# flc

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: lib.rs  main.rs
api/src/i18n/infra/schema/: dictionary.rs
api/src/schema/: query.rs
api/src/util/: error.rs  result.rs
docs/: features.md
flc-gateway/: Cargo.toml
flc-web/: .gitignore  package-lock.json  package.json
flc-web/.storybook/: main.ts  preview.ts
flc-web/app/: layout.tsx  middleware.ts
flc-web/app/@about/: page.tsx
flc-web/app/containers/: Neo.tsx
flc-web/src/: app.css  app.html
gateway/: Cargo.toml
src/: lib.rs  main.rs
src/feature/: mod.rs
src/feature/i18n/app/: adapter.rs
src/feature/i18n/domain/: mod.rs
src/feature/i18n/domain/entity/: mod.rs  translation.rs
src/feature/i18n/domain/vo/: mod.rs  translation_create_query_criteria.rs  translation_id.rs  translation_node.rs  translation_read_query_criteria.rs
src/feature/portfolio/assets/: index.css  index.html
src/util/: mod.rs  n64.rs  repo.rs
src/util/config/: builder.rs  config.rs  from_config.rs  mod.rs
src/util/config/entry/: entry.rs  entry_type.rs  mod.rs  singleton_data.rs
src/util/pagination/: page.rs
web/: .gitignore  README.md  package-lock.json  package.json
web/.storybook/: preview.ts
web/src/: app.html
web/src/lib/: utils.ts
web/src/lib/containers/: AppBar.svelte  Footer.svelte
web/src/lib/utils/: persistedStorage.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/portfolio/: +page.svelte
web/static/: app.css
(+29 files in other folders)
