[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["tracing", "http2"]}
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.4" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
